--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "GoGlobal nodejs SDK",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": ""
   },
   "repository": {
     "type": "git",
     "url": "git@alaa_github:AlaaAttya/go-global-nodejs-sdk.git"
   },
   "author": "Alaa Attya <alaa.attya91@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "node-libcurl": "^1.2.0"
+  }
 }
