--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   "author": "Alaa Attya <alaa.attya91@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "jest": "^21.2.1",
     "node-libcurl": "^1.2.0"
   }
 }
