--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "jest": "^21.2.1",
-    "node-libcurl": "^1.2.0"
+    "node-libcurl": "^1.2.0",
+    "node-pre-gyp": "^0.6.39"
   }
 }
