--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "author": "Alaa Attya <alaa.attya91@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
     "jest": "^21.2.1",
-    "node-libcurl": "^1.2.0",
     "node-pre-gyp": "^0.6.39"
   }
 }
