--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "GoGlobal nodejs SDK",
   "main": "index.js",
   "scripts": {
-    "test": ""
+    "test": "node_modules/eslint/bin/eslint.js lib"
   },
   "repository": {
     "type": "git",
@@ -17,8 +17,17 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^4.13.1",
+    "htmlencode": "0.0.4",
     "jest": "^21.2.1",
     "node-libcurl": "^1.2.0",
-    "node-pre-gyp": "^0.6.39"
+    "node-pre-gyp": "^0.6.39",
+    "xmlbuilder": "^9.0.4"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.0.3",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jest": "^21.5.0"
   }
 }
