--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "Alaa Attya <alaa.attya91@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
     "eslint": "^4.13.1",
     "htmlencode": "0.0.4",
     "jest": "^21.2.1",
