--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^4.13.1",
     "htmlencode": "0.0.4",
     "jest": "^21.2.1",
+    "lodash": "^4.17.4",
     "node-libcurl": "^1.2.0",
     "node-pre-gyp": "^0.6.39",
     "xmlbuilder": "^9.0.4"
